samples/_failures_safe/1761705520_304c91_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_34c00dbc.c: In function ‘main’:
./samples/SAFE/__tmp_34c00dbc.c:193:12: error: expected ‘,’ or ‘;’ at end of input
  193 |     struct Graph *graph = graph_create
      |            ^~~~~
./samples/SAFE/__tmp_34c00dbc.c:193:12: error: expected declaration or statement at end of input
